間違える部分を直しましたけど、また直したいところがあります

--- a/register.html
+++ b/register.html
@@ -24,9 +24,9 @@
                 <input type="password" class="login-field" value="" placeholder="Password" name="password" required>
 
                 <div>
-                    <a href="#" class="go">Login</a>
+                    <a href="#" class="go">Register</a>
                 </div>
-                <div class="content2">
+                <div class="content">
                     ログインは<a href="register.html">こちら</a>
                 </div>
             </form>
