--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <div>
                     <a href="#" class="go">Login</a>
                 </div>
-                <div class="content2">
+                <div class="content">
                     登録は<a href="register.html">こちら</a>
                 </div>
             </form>
