--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                     <a href="#" class="go">Register</a>
                 </div>
                 <div class="content">
-                    ログインは<a href="register.html">こちら</a>
+                    ログインは<a href="login.html">こちら</a>
                 </div>
             </form>
         </section>
